--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Show dotnet details
+      run: dotnet --info
     - name: Restore dependencies
       run: dotnet restore $SOLUTION_PATH
     - name: Build
